--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider:
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
